--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Start.SplashActivity"></activity>
-        <activity android:name=".StartActivity">
+        <activity android:name=".Auth.LoginActivity"></activity>
+        <activity android:name=".Auth.ResetPasswordActivity" />
+        <activity android:name=".Message.ChatActivity" />
+        <activity android:name=".Message.MessageActivity" />
+        <activity android:name=".Start.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".RegisterActivity" />
+        <activity android:name=".StartActivity" />
+        <activity android:name=".Auth.RegisterActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".PostActivity" />
         <activity
